@@ -8,6 +8,10 @@ update-manager (1:0.95.3) jaunty; urgency=low
   * DistUpgrade/DistUpgradeController.py: 
     - new test if the upgrade is run from a remote 
       login (LP: #301787)
+  * UpdateManager/Common/MyCache.py,
+    UpdateManager/Common/UpdateList.py:
+    - move the cache,updatelist implementation out into  
+      its own file
 
  --
 
